# booktalk

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/booktalk/: __main__.py  read_epub.py
