[project]
authors = [
    { email = "mlojek@protonmail.com", name = "mlojek" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "beautifulsoup4",
    "black",
    "ebooklib",
    "faiss-cpu",
    "isort",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-ollama",
    "pylint",
    "pypandoc",
    "pyprojectsort",
    "setuptools",
    "streamlit",
    "typing",
    "unstructured",
]
description = "Interact with books like never before with RAG-powered chatbot."
name = "booktalk"
readme = "README.md"
requires-python = ">=3.11.9"
version = "1"

[project.scripts]
booktalk = "booktalk.__main__:main"

[project.urls]
Homepage = "https://github.com/mlojek/booktalk"
